--- a/src/lsj/requirements.txt
+++ b/src/lsj/requirements.txt
@@ -1,9 +1,18 @@
-jieba~=0.42.1
-jieba3k~=0.35.1
-pandas~=3.0.0
-gensim~=4.4.0
-numpy~=2.4.2
-seaborn~=0.13.2
-requests~=2.32.5
-newspaper3k~=0.2.8
-sumy~=0.12.0
+# Data processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Visualization
+matplotlib>=3.7.0
+
+# NLP and text processing
+jieba>=0.42.1
+gensim>=4.3.0
+sumy>=0.11.0
+
+# Web scraping
+requests>=2.31.0
+newspaper3k>=0.2.8
+
+# Optional: Additional visualization
+seaborn>=0.13.0
