FEATURE: 添加了模型学习以及模型保存功能

--- a/.gitignore
+++ b/.gitignore
@@ -58,10 +58,11 @@ logs/
 *.sqlite
 *.sqlite3
 
-# Data files (uncomment if needed)
-# *.csv
-# *.json
-# *.xml
+ Data files (uncomment if needed)
+ *.csv
+ *.json
+ *.xml
+ *.jsonl
 
 # Model files
 *.model
