--- a/src/lsj/requirements.txt
+++ b/src/lsj/requirements.txt
@@ -2,17 +2,9 @@
 pandas>=2.0.0
 numpy>=1.24.0
 
-# Visualization
-matplotlib>=3.7.0
-
 # NLP and text processing
 jieba>=0.42.1
-gensim>=4.3.0
-sumy>=0.11.0
+scikit-learn>=1.3.0
 
-# Web scraping
+# Web scraping (optional)
 requests>=2.31.0
-newspaper3k>=0.2.8
-
-# Optional: Additional visualization
-seaborn>=0.13.0
